# DrivingSDK

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  OWNERS  README.md  SECURITYNOTE.md  Third_Party_Open_Source_Software_Notice  Third_Party_Open_Source__Software_Notice  requirements.txt  setup.py
kernels/: CMakeLists.txt
kernels/add_relu/: CMakeLists.txt
kernels/assign_score_withk/: CMakeLists.txt
kernels/batch_matmul_vector/: CMakeLists.txt
kernels/bev_pool/: CMakeLists.txt
kernels/bev_pool/op_host/: bev_pool.cpp
kernels/bev_pool_v2/: CMakeLists.txt
kernels/bev_pool_v2/op_host/: bev_pool.cpp
kernels/bev_pool_v3/: CMakeLists.txt
kernels/bev_pool_v3/op_host/: bev_pool_v3_tiling.h
kernels/border_align/: CMakeLists.txt
kernels/border_align/op_host/: border_align_grad.cpp
kernels/border_align/op_kernel/: border_align_grad.cpp
kernels/box_iou/: CMakeLists.txt
kernels/box_iou/op_kernel/: box_iou.cpp
kernels/boxes_overlap_bev/: CMakeLists.txt
kernels/boxes_overlap_bev/op_host/: boxes_overlap_bev_v1.cpp
kernels/cal_anchors_heading/: CMakeLists.txt
kernels/cal_anchors_heading/op_kernel/: cal_anchors_heading.cpp
kernels/calc_poly_start_end_sl/: CMakeLists.txt
kernels/calc_poly_start_end_sl/op_host/: calc_poly_start_end_sl.cpp
kernels/cartesian_to_frenet1/: CMakeLists.txt
kernels/common/: CMakeLists.txt
kernels/cylinder_query/: CMakeLists.txt
kernels/cylinder_query/op_host/: cylinder_query.cpp  cylinder_query_tiling.h
kernels/deformable_aggregation/: CMakeLists.txt
kernels/deformable_aggregation/op_host/: deformable_aggregation.cpp  deformable_aggregation_tiling.h
kernels/deformable_aggregation/op_kernel/: deformable_aggregation_grad.cpp
kernels/deformable_conv2d/: CMakeLists.txt
kernels/deformable_conv2d_v2/: CMakeLists.txt
kernels/deformable_conv2d_v2/op_host/: deformable_conv2d_v2.cpp  (+2 more)
kernels/diff_iou_rotated_sort_vertices/: CMakeLists.txt
kernels/draw_gaussian_to_heatmap/: CMakeLists.txt
kernels/dynamic_scatter/: CMakeLists.txt
kernels/dynamic_voxelization/: CMakeLists.txt
kernels/furthest_point_sampling/: CMakeLists.txt
kernels/furthest_point_sampling_with_dist/: CMakeLists.txt
kernels/fused_bias_leaky_relu/: CMakeLists.txt
kernels/gather_nms3d_mask/: CMakeLists.txt
kernels/gaussian/: CMakeLists.txt
kernels/geometric_kernel_attention/: CMakeLists.txt
kernels/graph_softmax/: CMakeLists.txt
kernels/grid_sampler2d_v2/: CMakeLists.txt
kernels/grid_sampler3d_v1/: CMakeLists.txt
kernels/group_points/: CMakeLists.txt
kernels/hard_voxelize/: CMakeLists.txt
kernels/hypot/: CMakeLists.txt
kernels/knn/: CMakeLists.txt
kernels/max_pool2d/: CMakeLists.txt
kernels/min_area_polygons/: CMakeLists.txt
kernels/multi_scale_deformable_attn/: CMakeLists.txt
kernels/nms3d/: CMakeLists.txt
kernels/nms3d_normal/: CMakeLists.txt
kernels/nms3d_on_sight/: CMakeLists.txt
kernels/op_host/: OWNERS  add_relu.cpp  assign_score_withk_grad.cpp  assign_score_withk_tiling.h  batch_matmul_vector_tiling.cpp  batch_matmul_vector_tiling.h  bev_pool.cpp  bev_pool_v3.cpp  border_align.cpp  border_align_grad.cpp  boxes_overlap_bev.cpp  boxes_overlap_bev_tiling.h  boxes_overlap_bev_v1.cpp  cal_anchors_heading.cpp  calc_poly_start_end_sl.cpp  cartesian_to_frenet1.cpp  common.h  cylinder_query.cpp  deformable_aggregation.cpp  deformable_aggregation_grad.cpp  deformable_conv2d.cpp  deformable_conv2d_grad.cpp  deformable_conv2d_grad_tiling.h  deformable_conv2d_grad_v2_tiling.cpp  deformable_conv2d_tiling.h  deformable_conv2d_v2.cpp  deformable_conv2d_v2_tiling.h  diff_iou_rotated_sort_vertices.cpp  draw_gaussian_to_heatmap.cpp  dynamic_scatter.cpp  dynamic_scatter_grad.cpp  dynamic_scatter_grad_tiling.h  dynamic_voxelization.cpp  gather_nms3d_mask_tiling.cpp  gaussian.cpp  gaussian_tiling.h  geometric_kernel_attention.cpp  geometric_kernel_attn_grad.cpp  geometric_kernel_attn_grad_tiling.h  graph_softmax.cpp  (+62 more)
kernels/op_kernel/: assign_score_withk.cpp  assign_score_withk_grad.cpp  batch_matmul_vector.cpp  bev_pool_v3.cpp  bev_pool_v3_grad.cpp  border_align.cpp  border_align_grad.cpp  box_iou.cpp  boxes_operator_utils.h  boxes_overlap_bev.cpp  boxes_overlap_bev_v1.cpp  cal_anchors_heading.cpp  cylinder_query.cpp  deformable_aggregation.cpp  deformable_aggregation_grad.cpp  deformable_conv2d.cpp  deformable_conv2d_grad.cpp  deformable_conv2d_grad_v2.cpp  deformable_conv2d_v2.cpp  diff_iou_rotated_sort_vertices.cpp  dynamic_scatter_max.h  furthest_point_sampling.h  gaussian.cpp  geometric_kernel_attention.cpp  geometric_kernel_attn_grad.cpp  graph_softmax.cpp  grid_sampler2d_v2.cpp  grid_sampler2d_v2_grad.cpp  group_points.cpp  hard_voxelize.cpp  ms_deform_attn_grad_high_perf.h  ms_deform_attn_grad_high_perf_v2.h  ms_deform_attn_high_perf.h  msda.h  multi_scale_deformable_attn.cpp  multi_scale_deformable_attn_grad.cpp  multi_scale_deformable_attn_grad_v2.cpp  nms3d.cpp  nms3d_normal.cpp  roi_align_rotated_grad_v2.cpp  (+28 more)
kernels/pixel_group/: CMakeLists.txt
kernels/point_to_voxel/: CMakeLists.txt
kernels/points_in_box/: CMakeLists.txt
kernels/points_in_box_all/: CMakeLists.txt
kernels/radius/: CMakeLists.txt
kernels/roi_align_rotated/: CMakeLists.txt
kernels/roiaware_avgpool3d/: CMakeLists.txt
kernels/roiaware_maxpool3d/: CMakeLists.txt
kernels/roiaware_pool3d/: CMakeLists.txt
kernels/roipoint_pool3d/: CMakeLists.txt
kernels/scatter_add/: CMakeLists.txt
kernels/scatter_max/: CMakeLists.txt
kernels/scatter_mean/: CMakeLists.txt
kernels/select_idx_with_mask/: CMakeLists.txt
kernels/sigmoid_focal_loss/: CMakeLists.txt
kernels/sparse_conv3d/: CMakeLists.txt
kernels/sparse_inverse_conv3d/: CMakeLists.txt
kernels/sparse_matmul/: CMakeLists.txt
kernels/subm_sparse_conv3d/: CMakeLists.txt
kernels/to_sparse/: CMakeLists.txt
kernels/unique_v2/: CMakeLists.txt
kernels/unique_voxel/: CMakeLists.txt
kernels/vec_pool/: CMakeLists.txt
kernels/voxel_pooling_train/: CMakeLists.txt
kernels/voxel_to_point/: CMakeLists.txt
mx_driving/perception/: CMakeLists.txt
(+2130 files in other folders)
