cmake_minimum_required(VERSION 3.19.0)
project(mx_driving)

include(cmake/config.cmake)
include(cmake/func.cmake)
include(cmake/intf.cmake)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bind)
set(MX_DRIVING_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mx_driving)
add_subdirectory(${MX_DRIVING_DIR}/common)
add_subdirectory(${MX_DRIVING_DIR}/preprocess)
add_subdirectory(${MX_DRIVING_DIR}/fused)
add_subdirectory(${MX_DRIVING_DIR}/point)
add_subdirectory(${MX_DRIVING_DIR}/detection)
add_subdirectory(${MX_DRIVING_DIR}/spconv)

if(BUILD_STAGE EQUAL 0)
  include(cmake/stage_0.cmake)
elseif(BUILD_STAGE EQUAL 1)
  include(cmake/stage_1.cmake)
elseif(BUILD_STAGE EQUAL 2)
  include(cmake/stage_2.cmake)
endif()
