if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/fused/ops/kernels)
  add_subdirectory(fused/ops/kernels)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/point/ops/kernels)
  add_subdirectory(point/ops/kernels)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/vision/ops/kernels)
  add_subdirectory(vision/ops/kernels)
endif()
